--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
       crossorigin="anonymous"
     />
 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <title>Mission Qabil</title>
   </head>
   <body>
